Code/syntax.output
语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | Specifier error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | ID error

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | error RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | error SEMI
   33     | error '\n'
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | RETURN error SEMI
   37     | RETURN Exp error
   38     | IF LP Exp RP Stmt
   39     | IF error Stmt
   40     | IF LP Exp RP Stmt ELSE Stmt
   41     | IF error Stmt ELSE Stmt
   42     | WHILE LP Exp RP Stmt
   43     | WHILE error Stmt

   44 DefList: Def DefList
   45        | %empty

   46 Def: Specifier DecList SEMI
   47    | Specifier error SEMI
   48    | Specifier DecList error

   49 DecList: Dec
   50        | Dec COMMA DecList

   51 Dec: VarDec
   52    | VarDec ASSIGNOP Exp

   53 Exp: LP Exp RP
   54    | ID LP Args RP
   55    | ID LP error RP
   56    | ID LP RP
   57    | Exp LB Exp RB
   58    | Exp LB error RB
   59    | Exp DOT ID
   60    | MINUS Exp
   61    | NOT Exp
   62    | Exp STAR Exp
   63    | Exp DIV Exp
   64    | Exp PLUS Exp
   65    | Exp MINUS Exp
   66    | Exp RELOP Exp
   67    | Exp AND Exp
   68    | Exp OR Exp
   69    | Exp ASSIGNOP Exp
   70    | ID
   71    | INT
   72    | FLOAT

   73 Args: Exp COMMA Args
   74     | Exp
   75     | Exp error


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 33
error (256) 8 20 23 28 32 33 36 37 39 41 43 47 48 55 58 75
ID (258) 15 17 18 21 22 23 54 55 56 59 70
INT (259) 19 71
FLOAT (260) 72
TYPE (261) 11
STRUCT (262) 13 14
RETURN (263) 35 36 37
IF (264) 38 39 40 41
ELSE (265) 40 41
WHILE (266) 42 43
SEMI (267) 4 5 7 31 32 35 36 46 47
COMMA (268) 10 24 50 73
ASSIGNOP (269) 52 69
RELOP (270) 66
PLUS (271) 64
MINUS (272) 60 65
STAR (273) 62
DIV (274) 63
AND (275) 67
OR (276) 68
DOT (277) 59
NOT (278) 61
LP (279) 21 22 38 40 42 53 54 55 56
RP (280) 21 22 38 40 42 53 54 55 56
LB (281) 19 20 57 58
RB (282) 19 20 57 58
LC (283) 13 27
RC (284) 13 27 28
LOWER_THAN_ELSE (285)
NEG (286)


Nonterminals, with rules where they appear

$accept (33)
    左： 0
Program (34)
    左： 1, 右： 0
ExtDefList (35)
    左： 2 3, 右： 1 2
ExtDef (36)
    左： 4 5 6 7 8, 右： 2
ExtDecList (37)
    左： 9 10, 右： 4 10
Specifier (38)
    左： 11 12, 右： 4 5 6 7 8 26 46 47 48
StructSpecifier (39)
    左： 13 14, 右： 12
OptTag (40)
    左： 15 16, 右： 13
Tag (41)
    左： 17, 右： 14
VarDec (42)
    左： 18 19 20, 右： 9 10 19 20 26 51 52
FunDec (43)
    左： 21 22 23, 右： 6 7
VarList (44)
    左： 24 25, 右： 21 24
ParamDec (45)
    左： 26, 右： 24 25
CompSt (46)
    左： 27 28, 右： 6 34
StmtList (47)
    左： 29 30, 右： 27 29
Stmt (48)
    左： 31 32 33 34 35 36 37 38 39 40 41 42 43, 右： 29 38 39
    40 41 42 43
DefList (49)
    左： 44 45, 右： 13 27 44
Def (50)
    左： 46 47 48, 右： 44
DecList (51)
    左： 49 50, 右： 46 48 50
Dec (52)
    左： 51 52, 右： 49 50
Exp (53)
    左： 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
    72, 右： 31 35 37 38 40 42 52 53 57 58 59 60 61 62 63 64 65 66
    67 68 69 73 74 75
Args (54)
    左： 73 74 75, 右： 54 73


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 1

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 2

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 16 (OptTag)

    OptTag  转到状态 9
    Tag     转到状态 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 12
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    8       | Specifier . error

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  转到状态 16
    VarDec      转到状态 17
    FunDec      转到状态 18


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 9

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  接受


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    8 ExtDef: Specifier error .

    $default  reduce using rule 8 (ExtDef)


State 14

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP
   23       | ID . error

    error  shift, and go to state 20
    LP     shift, and go to state 21

    SEMI   reduce using rule 18 (VarDec)
    COMMA  reduce using rule 18 (VarDec)
    LB     reduce using rule 18 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 17

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 9 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    error  shift, and go to state 25
    SEMI   shift, and go to state 26
    LC     shift, and go to state 27

    CompSt  转到状态 28


State 19

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 45 (DefList)

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    DefList          转到状态 30
    Def              转到状态 31


State 20

   23 FunDec: ID error .

    $default  reduce using rule 23 (FunDec)


State 21

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 32

    Specifier        转到状态 33
    StructSpecifier  转到状态 7
    VarList          转到状态 34
    ParamDec         转到状态 35


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  转到状态 37
    VarDec      转到状态 17


State 24

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error RB

    error  shift, and go to state 38
    INT    shift, and go to state 39


State 25

   28 CompSt: error . RC

    RC  shift, and go to state 40


State 26

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 27

   27 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 45 (DefList)

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    DefList          转到状态 41
    Def              转到状态 31


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   46 Def: Specifier . DecList SEMI
   47    | Specifier . error SEMI
   48    | Specifier . DecList error

    error  shift, and go to state 42
    ID     shift, and go to state 36

    VarDec   转到状态 43
    DecList  转到状态 44
    Dec      转到状态 45


State 30

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


State 31

   44 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 45 (DefList)

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    DefList          转到状态 47
    Def              转到状态 31


State 32

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 33

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  转到状态 48


State 34

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


State 35

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 25 (VarList)


State 36

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 37

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 38

   20 VarDec: VarDec LB error . RB

    RB  shift, and go to state 51


State 39

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 52


State 40

   28 CompSt: error RC .

    $default  reduce using rule 28 (CompSt)


State 41

   27 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 53
    ID      shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 27

    RC  reduce using rule 30 (StmtList)

    CompSt    转到状态 63
    StmtList  转到状态 64
    Stmt      转到状态 65
    Exp       转到状态 66


State 42

   47 Def: Specifier error . SEMI

    SEMI  shift, and go to state 67


State 43

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   51 Dec: VarDec .
   52    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 24

    $default  reduce using rule 51 (Dec)


State 44

   46 Def: Specifier DecList . SEMI
   48    | Specifier DecList . error

    error  shift, and go to state 69
    SEMI   shift, and go to state 70


State 45

   49 DecList: Dec .
   50        | Dec . COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 49 (DecList)


State 46

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 47

   44 DefList: Def DefList .

    $default  reduce using rule 44 (DefList)


State 48

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 26 (ParamDec)


State 49

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 50

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        转到状态 33
    StructSpecifier  转到状态 7
    VarList          转到状态 72
    ParamDec         转到状态 35


State 51

   20 VarDec: VarDec LB error RB .

    $default  reduce using rule 20 (VarDec)


State 52

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 53

   28 CompSt: error . RC
   32 Stmt: error . SEMI
   33     | error . '\n'

    SEMI  shift, and go to state 73
    RC    shift, and go to state 40
    '\n'  shift, and go to state 74


State 54

   54 Exp: ID . LP Args RP
   55    | ID . LP error RP
   56    | ID . LP RP
   70    | ID .

    LP  shift, and go to state 75

    $default  reduce using rule 70 (Exp)


State 55

   71 Exp: INT .

    $default  reduce using rule 71 (Exp)


State 56

   72 Exp: FLOAT .

    $default  reduce using rule 72 (Exp)


State 57

   35 Stmt: RETURN . Exp SEMI
   36     | RETURN . error SEMI
   37     | RETURN . Exp error

    error  shift, and go to state 76
    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 77


State 58

   38 Stmt: IF . LP Exp RP Stmt
   39     | IF . error Stmt
   40     | IF . LP Exp RP Stmt ELSE Stmt
   41     | IF . error Stmt ELSE Stmt

    error  shift, and go to state 78
    LP     shift, and go to state 79


State 59

   42 Stmt: WHILE . LP Exp RP Stmt
   43     | WHILE . error Stmt

    error  shift, and go to state 80
    LP     shift, and go to state 81


State 60

   60 Exp: MINUS . Exp

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 82


State 61

   61 Exp: NOT . Exp

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 83


State 62

   53 Exp: LP . Exp RP

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 84


State 63

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 64

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 85


State 65

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 53
    ID      shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 27

    RC  reduce using rule 30 (StmtList)

    CompSt    转到状态 63
    StmtList  转到状态 86
    Stmt      转到状态 65
    Exp       转到状态 66


State 66

   31 Stmt: Exp . SEMI
   57 Exp: Exp . LB Exp RB
   58    | Exp . LB error RB
   59    | Exp . DOT ID
   62    | Exp . STAR Exp
   63    | Exp . DIV Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . RELOP Exp
   67    | Exp . AND Exp
   68    | Exp . OR Exp
   69    | Exp . ASSIGNOP Exp

    SEMI      shift, and go to state 87
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97


State 67

   47 Def: Specifier error SEMI .

    $default  reduce using rule 47 (Def)


State 68

   52 Dec: VarDec ASSIGNOP . Exp

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 98


State 69

   48 Def: Specifier DecList error .

    $default  reduce using rule 48 (Def)


State 70

   46 Def: Specifier DecList SEMI .

    $default  reduce using rule 46 (Def)


State 71

   50 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   转到状态 43
    DecList  转到状态 99
    Dec      转到状态 45


State 72

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 73

   32 Stmt: error SEMI .

    $default  reduce using rule 32 (Stmt)


State 74

   33 Stmt: error '\n' .

    $default  reduce using rule 33 (Stmt)


State 75

   54 Exp: ID LP . Args RP
   55    | ID LP . error RP
   56    | ID LP . RP

    error  shift, and go to state 100
    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62
    RP     shift, and go to state 101

    Exp   转到状态 102
    Args  转到状态 103


State 76

   36 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 104


State 77

   35 Stmt: RETURN Exp . SEMI
   37     | RETURN Exp . error
   57 Exp: Exp . LB Exp RB
   58    | Exp . LB error RB
   59    | Exp . DOT ID
   62    | Exp . STAR Exp
   63    | Exp . DIV Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . RELOP Exp
   67    | Exp . AND Exp
   68    | Exp . OR Exp
   69    | Exp . ASSIGNOP Exp

    error     shift, and go to state 105
    SEMI      shift, and go to state 106
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97


State 78

   39 Stmt: IF error . Stmt
   41     | IF error . Stmt ELSE Stmt

    error   shift, and go to state 53
    ID      shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 27

    CompSt  转到状态 63
    Stmt    转到状态 107
    Exp     转到状态 66


State 79

   38 Stmt: IF LP . Exp RP Stmt
   40     | IF LP . Exp RP Stmt ELSE Stmt

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 108


State 80

   43 Stmt: WHILE error . Stmt

    error   shift, and go to state 53
    ID      shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 27

    CompSt  转到状态 63
    Stmt    转到状态 109
    Exp     转到状态 66


State 81

   42 Stmt: WHILE LP . Exp RP Stmt

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 110


State 82

   57 Exp: Exp . LB Exp RB
   58    | Exp . LB error RB
   59    | Exp . DOT ID
   60    | MINUS Exp .
   62    | Exp . STAR Exp
   63    | Exp . DIV Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . RELOP Exp
   67    | Exp . AND Exp
   68    | Exp . OR Exp
   69    | Exp . ASSIGNOP Exp

    DOT  shift, and go to state 96
    LB   shift, and go to state 97

    $default  reduce using rule 60 (Exp)


State 83

   57 Exp: Exp . LB Exp RB
   58    | Exp . LB error RB
   59    | Exp . DOT ID
   61    | NOT Exp .
   62    | Exp . STAR Exp
   63    | Exp . DIV Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . RELOP Exp
   67    | Exp . AND Exp
   68    | Exp . OR Exp
   69    | Exp . ASSIGNOP Exp

    DOT  shift, and go to state 96
    LB   shift, and go to state 97

    $default  reduce using rule 61 (Exp)


State 84

   53 Exp: LP Exp . RP
   57    | Exp . LB Exp RB
   58    | Exp . LB error RB
   59    | Exp . DOT ID
   62    | Exp . STAR Exp
   63    | Exp . DIV Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . RELOP Exp
   67    | Exp . AND Exp
   68    | Exp . OR Exp
   69    | Exp . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    RP        shift, and go to state 111
    LB        shift, and go to state 97


State 85

   27 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 27 (CompSt)


State 86

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


State 87

   31 Stmt: Exp SEMI .

    $default  reduce using rule 31 (Stmt)


State 88

   69 Exp: Exp ASSIGNOP . Exp

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 112


State 89

   66 Exp: Exp RELOP . Exp

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 113


State 90

   64 Exp: Exp PLUS . Exp

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 114


State 91

   65 Exp: Exp MINUS . Exp
